...
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true"-->
<!--                android:text = "Select"/>-->
<!--            <Button-->
<!--                android:id="@+id/add_item_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true"-->
<!--                android:gravity="end"-->
<!--                android:text="Add" />-->
...
