<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/bg_toolbar"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/sort_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bg_yellow"
            android:clickable="true"
            android:focusable="true"
            android:text="Sort"
            android:textColor="@color/black">

        </Button>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="HomeHeirs"
            android:layout_marginStart="40dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white">
        </TextView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/bg_yellow"
            app:srcCompat="@android:drawable/ic_input_add">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </LinearLayout>

    <TextView
        android:id="@+id/asc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ascending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_search_view">

    </TextView>

    <LinearLayout
        android:id="@+id/sortLayoutAsc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/asc">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:textColor="@color/black"
            android:onClick="dateASCTapped"
            android:id="@+id/dateASCTapped"
            android:text="Date" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:textColor="@color/black"
            android:onClick="descriptionASCTapped"
            android:id="@+id/descriptionASCTapped"
            android:text="Description"
            android:textSize="13dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:textColor="@color/black"
            android:id="@+id/makeASCTapped"
            android:onClick="makeASCTapped"
            android:text="Make" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:textColor="@color/black"
            android:id="@+id/valueASCTapped"
            android:onClick="valueASCTapped"
            android:text="Value" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:textColor="@color/black"
            android:id="@+id/tagsASCTapped"
            android:onClick="tagsASCTapped"
            android:text="Tags" />

    </LinearLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Descending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortLayoutAsc">
        >

    </TextView>

    <LinearLayout
        android:id="@+id/sortLayoutDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/desc">


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="dateDESTapped"
            android:id="@+id/dateDESTapped"
            android:text="Date"
            android:textColor="@color/black" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="descriptionDESTapped"
            android:id="@+id/descriptionDESTapped"
            android:text="Description"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="makeDESTapped"
            android:id="@+id/makeDESTapped"
            android:text="Make"
            android:textColor="@color/black" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="valueDESTapped"
            android:id="@+id/valueDESTapped"
            android:text="Value"
            android:textColor="@color/black" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="tagsDESTapped"
            android:id="@+id/tagsDESTapped"
            android:text="Tags"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/total_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterLayout"
        app:layout_constraintVertical_bias="1.0">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/total_value"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total_value_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:text="Total Value (CAD$):"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"></TextView>


        <TextView
            android:id="@+id/total_value_amount"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/sortLayoutDes">

        <Button
            android:id="@+id/allFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="allFilterTapped"
            android:text="All"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/dateFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="dateFilterTapped"
            android:text="Date"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/descFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="descFilterTapped"
            android:text="Descr"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/makeFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="makeFilterTapped"
            android:text="Make"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/tagsFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="tagsFilterTapped"
            android:text="Tags"
            android:textColor="@color/black" />

    </LinearLayout>

    <SearchView
        android:id="@+id/list_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="Search"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar">

    </SearchView>

    <LinearLayout
        android:id="@+id/hidden_toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:visibility="gone"
        android:background="@color/bg_toolbar"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <!-- Add Tag Button -->
        <Button
            android:id="@+id/mutliple_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="Add Tag" />

        <!-- Delete Button -->
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_yellow"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation_menu"
        tools:ignore="MissingConstraints">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>